# EasyManageBot

./: .env.example  .gitignore  Dockerfile  PROJECT_GUIDE.md  README.md  pyproject.toml
posting_assistant_bot/: __init__.py  config.py  logging_utils.py  main.py  telegram_ui.py  text_normalization.py  topic_memory.py  transcription.py  ui_text.py
posting_assistant_bot/application/: __init__.py  ports.py
posting_assistant_bot/application/services/: README.md  __init__.py  comments_service.py  posting_service.py  runtime_read_model_service.py  topics_service.py
posting_assistant_bot/claude/: __init__.py  client.py  orchestrator.py
posting_assistant_bot/domain/: __init__.py  events.py
posting_assistant_bot/obsidian/: vault.py
posting_assistant_bot/prompts/: post_types.json  role_prompt.txt  style_prompt.txt  tags.txt  themes_prompt.txt
posting_assistant_bot/storage/: __init__.py  database.py
